--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       crossorigin="anonymous"
     />
     
-    <link rel="stylesheet" href="dist/style.css?cb=1635512584533" />
+    <link rel="stylesheet" href="dist/style.css?cb=1635520491974" />
 
 		<!-- JavaScript File -->
     <script defer
@@ -45,21 +45,17 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script defer src="dist/all.js?cb=1635512584533"></script>
+    <script defer src="dist/all.js?cb=1635520491974"></script>
   </head>
   <body>
     <main>
       <section class="content">
-        <h1>Front-end Boilerplate</h1>
-        <h2>Using Sass and Gulp</h2>
-
-        <p>Here's a quick set-up guide:</p>
-
+				<img src="./app/img/logo.png" alt="">
         <ul>
-          <li>Clone Git repo</li>
-          <li>Install by running "npm install" on the commmand line</li>
-          <li>Run "gulp" on the command line.</li>
-        </ul>
+					<li>
+						<a href="./map.html">1. Search Suburb and View by Map</a>
+					</li>
+				</ul>
       </section>
     </main>    
   </body>
