--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       crossorigin="anonymous"
     />
     
-    <link rel="stylesheet" href="dist/style.css?cb=1635520733174" />
+    <link rel="stylesheet" href="dist/style.css?cb=1635683626541" />
 
 		<!-- JavaScript File -->
     <script defer
@@ -45,12 +45,12 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script defer src="dist/all.js?cb=1635520733174"></script>
+    <script defer src="dist/all.js?cb=1635683626541"></script>
   </head>
   <body>
     <main>
       <section class="content">
-				<img src="./app/img/logo.png" alt="">
+				<img src="./dist/img/logo.png" alt="">
         <ul>
 					<li>
 						<a href="./map.html">1. Search Suburb and View by Map</a>
