--- a/map.html
+++ b/map.html
@@ -53,15 +53,17 @@
       <nav class="navbar navbar-light p-0">
         <div class="container justify-content-center">
           <a class="navbar-brand" href="./index.html">
-            <img src="./app/img/logo.png" alt="" />
+            <img src="./dist/img/logo.png" alt="" />
           </a>
-        </div>
-        <div class="sub-nav bg-yellow">
-          <h4 class="title">Covid-19 vaccination coordination by suburb</h4>
-        </div>
+        </div>        
       </nav>
     </header>
     <main>
+      <section class="section section--alert">
+        <div class="sub-nav bg-yellow">
+          <h4 class="title">Covid-19 vaccination coordination by suburb</h4>
+        </div>
+      </section>
       <section class="section section--map">
         <form class="form form--float">
           <div class="form-group">
@@ -84,11 +86,8 @@
                   <i class="fas fa-chevron-down"></i>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
+                  <li><a class="dropdown-item" href="#">View by map</a></li>
+                  <li><a class="dropdown-item" href="#">View by list</a></li>                  
                 </ul>
               </div>
             </div>
