Create progress list

--- a/map.html
+++ b/map.html
@@ -82,12 +82,12 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  <i class="fas fa-map-marked-alt"></i>
+                  <i class="icon icon--view fas fa-map-marked-alt"></i>
                   <i class="fas fa-chevron-down"></i>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#">View by map</a></li>
-                  <li><a class="dropdown-item" href="#">View by list</a></li>                  
+                  <li><a class="dropdown-item" href="./map.html">View by map</a></li>
+                  <li><a class="dropdown-item" href="./list.html">View by list</a></li>                  
                 </ul>
               </div>
             </div>
