Adjust media query

--- a/map.html
+++ b/map.html
@@ -50,10 +50,10 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-light p-0">
+      <nav class="navbar main-navbar p-0">
         <div class="container justify-content-center">
           <a class="navbar-brand" href="./index.html">
-            <img src="./dist/img/logo.png" alt="" />
+            <img class="img-fluid" src="./dist/img/logo.png" alt="" />
           </a>
         </div>        
       </nav>
