--- a/list.html
+++ b/list.html
@@ -50,10 +50,10 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-light p-0">
+      <nav class="navbar main-navbar p-0">
         <div class="container justify-content-center">
           <a class="navbar-brand" href="./index.html">
-            <img src="./dist/img/logo.png" alt="" />
+            <img class="img-fluid" src="./dist/img/logo.png" alt="" />
           </a>
         </div>        
       </nav>
@@ -122,8 +122,8 @@
           </div>
         </form>
         <div class="container-fluid">
-          <div class="row">
-            <div class="col-6 col-md-4 col-lg-4">
+          <div class="row row--list">
+            <div class="col-6 col-md-4 col-lg-4 p-0">
               <div class="card card--list">
                 <h4 class="title">Eden Terrace</h4>
                 <div class="eligible-wrapper">
@@ -140,22 +140,22 @@
                   </li>
                   <li class="list__item list__item--progress first-dose">
                     <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
+                      <h6 class="title">First Dose</h6>
                       <p class="text">48</p>
                       <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
                     </div>
                   </li>
                   <li class="list__item list__item--progress second-dose">
                     <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
+                      <h6 class="title">Second Dose</h6>
                       <p class="text">48</p>
                       <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
                     </div>
                   </li>
                 </ul>
               </div>
-            </div>            
-            <div class="col-6 col-md-4 col-lg-4">
+            </div>
+            <div class="col-6 col-md-4 col-lg-4 p-0">
               <div class="card card--list">
                 <h4 class="title">Eden Terrace</h4>
                 <div class="eligible-wrapper">
@@ -172,22 +172,22 @@
                   </li>
                   <li class="list__item list__item--progress first-dose">
                     <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
+                      <h6 class="title">First Dose</h6>
                       <p class="text">48</p>
                       <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
                     </div>
                   </li>
                   <li class="list__item list__item--progress second-dose">
                     <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
+                      <h6 class="title">Second Dose</h6>
                       <p class="text">48</p>
                       <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
                     </div>
                   </li>
                 </ul>
               </div>
-            </div>            
-            <div class="col-6 col-md-4 col-lg-4">
+            </div>
+            <div class="col-6 col-md-4 col-lg-4 p-0">
               <div class="card card--list">
                 <h4 class="title">Eden Terrace</h4>
                 <div class="eligible-wrapper">
@@ -204,245 +204,21 @@
                   </li>
                   <li class="list__item list__item--progress first-dose">
                     <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
+                      <h6 class="title">First Dose</h6>
                       <p class="text">48</p>
                       <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
                     </div>
                   </li>
                   <li class="list__item list__item--progress second-dose">
                     <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
+                      <h6 class="title">Second Dose</h6>
                       <p class="text">48</p>
                       <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
                     </div>
                   </li>
                 </ul>
               </div>
-            </div>            
-            <div class="col-6 col-md-4 col-lg-4">
-              <div class="card card--list">
-                <h4 class="title">Eden Terrace</h4>
-                <div class="eligible-wrapper">
-                  <div class="text">Eligible Population </div>
-                  <div class="text text--number">254</div>
-                </div>
-                <ul class="list">
-                  <li class="list__item list__item--progress unvaccinated">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress first-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress second-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>            
-            <div class="col-6 col-md-4 col-lg-4">
-              <div class="card card--list">
-                <h4 class="title">Eden Terrace</h4>
-                <div class="eligible-wrapper">
-                  <div class="text">Eligible Population </div>
-                  <div class="text text--number">254</div>
-                </div>
-                <ul class="list">
-                  <li class="list__item list__item--progress unvaccinated">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress first-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress second-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>            
-            <div class="col-6 col-md-4 col-lg-4">
-              <div class="card card--list">
-                <h4 class="title">Eden Terrace</h4>
-                <div class="eligible-wrapper">
-                  <div class="text">Eligible Population </div>
-                  <div class="text text--number">254</div>
-                </div>
-                <ul class="list">
-                  <li class="list__item list__item--progress unvaccinated">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress first-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress second-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>            
-            <div class="col-6 col-md-4 col-lg-4">
-              <div class="card card--list">
-                <h4 class="title">Eden Terrace</h4>
-                <div class="eligible-wrapper">
-                  <div class="text">Eligible Population </div>
-                  <div class="text text--number">254</div>
-                </div>
-                <ul class="list">
-                  <li class="list__item list__item--progress unvaccinated">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress first-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress second-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>            
-            <div class="col-6 col-md-4 col-lg-4">
-              <div class="card card--list">
-                <h4 class="title">Eden Terrace</h4>
-                <div class="eligible-wrapper">
-                  <div class="text">Eligible Population </div>
-                  <div class="text text--number">254</div>
-                </div>
-                <ul class="list">
-                  <li class="list__item list__item--progress unvaccinated">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress first-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress second-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>            
-            <div class="col-6 col-md-4 col-lg-4">
-              <div class="card card--list">
-                <h4 class="title">Eden Terrace</h4>
-                <div class="eligible-wrapper">
-                  <div class="text">Eligible Population </div>
-                  <div class="text text--number">254</div>
-                </div>
-                <ul class="list">
-                  <li class="list__item list__item--progress unvaccinated">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress first-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress second-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>            
-            <div class="col-6 col-md-4 col-lg-4">
-              <div class="card card--list">
-                <h4 class="title">Eden Terrace</h4>
-                <div class="eligible-wrapper">
-                  <div class="text">Eligible Population </div>
-                  <div class="text text--number">254</div>
-                </div>
-                <ul class="list">
-                  <li class="list__item list__item--progress unvaccinated">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress first-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                  <li class="list__item list__item--progress second-dose">
-                    <div class="progress-wrapper">
-                      <h6 class="title">Unvaccinated</h6>
-                      <p class="text">48</p>
-                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>            
+            </div>
           </div>
         </div>
       </section>
