--- a/list.html
+++ b/list.html
@@ -73,7 +73,7 @@
                 <option value="1">Auckland</option>
               </select>
             </div>
-            <div class="wrapper">
+            <div class="wrapper wrapper--dropdown">
               <div class="dropdown">
                 <button
                   class="btn btn--white"
@@ -82,6 +82,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
+                  <p class="text">View by list</p>
                   <i class="icon icon--view fas fa-list"></i>
                   <i class="fas fa-chevron-down"></i>
                 </button>
