--- a/list.html
+++ b/list.html
@@ -100,7 +100,7 @@
               <input type="text" class="form-control" id="exampleInputtext1" aria-describedby="text" placeholder="Eg. Auckland Airport">
               <i class="icon icon--search fas fa-search"></i>
             </div>
-            <div class="wrapper">
+            <div class="wrapper wrapper--dropdown">
               <div class="dropdown">
                 <button
                   class="btn btn--white"
@@ -109,7 +109,9 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                <i class="icon icon--sort fas fa-sort-amount-down"></i>                  
+                  <p class="text">All Dose</p>
+                  <i class="icon icon--sort fas fa-sort-amount-down"></i>
+                  <i class="fas fa-chevron-down"></i>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                   <li><a class="dropdown-item" href="#">All Dose</a></li>
