--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       crossorigin="anonymous"
     />
     
-    <link rel="stylesheet" href="dist/style.css?cb=1635861408486" />
+    <link rel="stylesheet" href="dist/style.css?cb=1635861660602" />
 
 		<!-- JavaScript File -->
     <script defer
@@ -45,15 +45,18 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script defer src="dist/all.js?cb=1635861408486"></script>
+    <script defer src="dist/all.js?cb=1635861660602"></script>
   </head>
   <body>
     <main>
-      <section class="content">
+      <section class="section section--index">
 				<img src="./dist/img/logo.png" alt="">
         <ul>
 					<li>
-						<a href="./map.html">1. Search Suburb and View by Map</a>
+						<a href="./map.html">1. View by Map</a>
+					</li>
+					<li>
+						<a href="./list.html">2. View by List</a>
 					</li>
 				</ul>
       </section>
