--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       crossorigin="anonymous"
     />
     
-    <link rel="stylesheet" href="dist/style.css?cb=1635861660602" />
+    <link rel="stylesheet" href="dist/style.css?cb=1635862163571" />
 
 		<!-- JavaScript File -->
     <script defer
@@ -45,12 +45,20 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script defer src="dist/all.js?cb=1635861660602"></script>
+    <script defer src="dist/all.js?cb=1635862163571"></script>
   </head>
   <body>
+    <header>
+      <nav class="navbar main-navbar p-0">
+        <div class="container justify-content-center">
+          <a class="navbar-brand" href="./index.html">
+            <img class="img-fluid" src="./dist/img/logo.png" alt="" />
+          </a>
+        </div>        
+      </nav>
+    </header>
     <main>
-      <section class="section section--index">
-				<img src="./dist/img/logo.png" alt="">
+      <section class="section section--index">				
         <ul>
 					<li>
 						<a href="./map.html">1. View by Map</a>
