--- a/map.html
+++ b/map.html
@@ -134,7 +134,7 @@
               <li class="list__item">
                 <div class="wrapper wrapper--item">
                   <span class="box box--secondary"></span>
-                  <p class="text">60% 1st dose</p>
+                  <p class="text">61-79% 1st dose</p>
                 </div>
                 <div class="checkbox-wrapper">
                   <label for="marker-two" class="label-checkbox">
@@ -148,7 +148,7 @@
               <li class="list__item">
                 <div class="wrapper wrapper--item">
                   <span class="box box--primary"></span>
-                  <p class="text">60% 1st dose</p>
+                  <p class="text">> 80% 1st dose</p>
                 </div>
                 <div class="checkbox-wrapper">
                   <label for="marker-three" class="label-checkbox">
