--- a/list.html
+++ b/list.html
@@ -94,7 +94,7 @@
             </div>
           </div>
         </form>
-        <form class="form">
+        <form class="form form--list">
           <div class="form-group">
             <div class="wrapper wrapper--input">
               <input type="text" class="form-control" id="exampleInputtext1" aria-describedby="text" placeholder="Eg. Auckland Airport">
@@ -124,8 +124,200 @@
             </div>
           </div>
         </form>
-        <div class="container-fluid">
+        <div class="container-list container-fluid">
           <div class="row row--list">
+            <div class="col-6 col-md-4 col-lg-4 p-0">
+              <div class="card card--list">
+                <h4 class="title">Eden Terrace</h4>
+                <div class="eligible-wrapper">
+                  <div class="text">Eligible Population </div>
+                  <div class="text text--number">254</div>
+                </div>
+                <ul class="list">
+                  <li class="list__item list__item--progress unvaccinated">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Unvaccinated</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress first-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">First Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress second-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Second Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-4 p-0">
+              <div class="card card--list">
+                <h4 class="title">Eden Terrace</h4>
+                <div class="eligible-wrapper">
+                  <div class="text">Eligible Population </div>
+                  <div class="text text--number">254</div>
+                </div>
+                <ul class="list">
+                  <li class="list__item list__item--progress unvaccinated">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Unvaccinated</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress first-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">First Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress second-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Second Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-4 p-0">
+              <div class="card card--list">
+                <h4 class="title">Eden Terrace</h4>
+                <div class="eligible-wrapper">
+                  <div class="text">Eligible Population </div>
+                  <div class="text text--number">254</div>
+                </div>
+                <ul class="list">
+                  <li class="list__item list__item--progress unvaccinated">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Unvaccinated</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress first-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">First Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress second-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Second Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-4 p-0">
+              <div class="card card--list">
+                <h4 class="title">Eden Terrace</h4>
+                <div class="eligible-wrapper">
+                  <div class="text">Eligible Population </div>
+                  <div class="text text--number">254</div>
+                </div>
+                <ul class="list">
+                  <li class="list__item list__item--progress unvaccinated">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Unvaccinated</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress first-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">First Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress second-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Second Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-4 p-0">
+              <div class="card card--list">
+                <h4 class="title">Eden Terrace</h4>
+                <div class="eligible-wrapper">
+                  <div class="text">Eligible Population </div>
+                  <div class="text text--number">254</div>
+                </div>
+                <ul class="list">
+                  <li class="list__item list__item--progress unvaccinated">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Unvaccinated</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress first-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">First Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress second-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Second Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-4 p-0">
+              <div class="card card--list">
+                <h4 class="title">Eden Terrace</h4>
+                <div class="eligible-wrapper">
+                  <div class="text">Eligible Population </div>
+                  <div class="text text--number">254</div>
+                </div>
+                <ul class="list">
+                  <li class="list__item list__item--progress unvaccinated">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Unvaccinated</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress first-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">First Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                  <li class="list__item list__item--progress second-dose">
+                    <div class="progress-wrapper">
+                      <h6 class="title">Second Dose</h6>
+                      <p class="text">48</p>
+                      <progress class="progress-bar" id="file" value="32" max="100"> 32% </progress>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
             <div class="col-6 col-md-4 col-lg-4 p-0">
               <div class="card card--list">
                 <h4 class="title">Eden Terrace</h4>
