Adding vaccination buses

--- a/map.html
+++ b/map.html
@@ -120,7 +120,7 @@
               <li class="list__item">
                 <div class="wrapper wrapper--item">
                   <span class="box box--tertiary"></span>
-                  <p class="text">60% 1st dose</p>
+                  <p class="text"><60% 1st dose</p>
                 </div>
                 <div class="checkbox-wrapper">
                   <label for="marker-one" class="label-checkbox">
@@ -149,6 +149,20 @@
                 <div class="wrapper wrapper--item">
                   <span class="box box--primary"></span>
                   <p class="text">> 80% 1st dose</p>
+                </div>
+                <div class="checkbox-wrapper">
+                  <label for="marker-three" class="label-checkbox">
+                    <input type="checkbox" class="form-checkbox" id="marker-three" />
+                    <div class="custom-checkbox">
+                      <i class="icon icon--check fas fa-check"></i>
+                    </div>
+                  </label>
+                </div>
+              </li>
+              <li class="list__item">
+                <div class="wrapper wrapper--item">
+                  <span class="box box--vaccination"></span>
+                  <p class="text">Vaccination buses</p>
                 </div>
                 <div class="checkbox-wrapper">
                   <label for="marker-three" class="label-checkbox">
