--- a/map.html
+++ b/map.html
@@ -165,8 +165,8 @@
                   <p class="text">Vaccination buses</p>
                 </div>
                 <div class="checkbox-wrapper">
-                  <label for="marker-three" class="label-checkbox">
-                    <input type="checkbox" class="form-checkbox" id="marker-three" />
+                  <label for="marker-four" class="label-checkbox">
+                    <input type="checkbox" class="form-checkbox" id="marker-four" />
                     <div class="custom-checkbox">
                       <i class="icon icon--check fas fa-check"></i>
                     </div>
