--- a/map.html
+++ b/map.html
@@ -190,6 +190,16 @@
           </div>
         </div>
       </section>
+      <section class="section section--footer">
+        <div class="bottom-bar">
+          <p class="text">
+            Source : <strong>minhealthnz / nz-covid-data</strong>
+          </p>
+          <p class="text">
+            Last updated : <strong>Nov 10 2021, 11:05 AM</strong>            
+          </p>
+        </div>
+      </section>
     </main>
     <script
       async
