--- a/map.html
+++ b/map.html
@@ -52,8 +52,11 @@
     <header>
       <nav class="navbar main-navbar p-0">
         <div class="container justify-content-center">
-          <a class="navbar-brand" href="./index.html">
+          <a class="navbar-brand first" href="./index.html">
             <img class="img-fluid" src="./dist/img/logo.png" alt="" />
+          </a>
+          <a class="navbar-brand second" href="./index.html">
+            <img class="img-fluid" src="./dist/img/tuaiwi_logo.png" alt="" />
           </a>
         </div>
       </nav>
@@ -99,7 +102,7 @@
           </div>
         </form>
         <div class="map-wrapper">
-          <div id="map" class="map"></div>          
+          <div id="map" class="map"></div>
         </div>
         <div class="card card--bottom">
           <div class="card-header border-bottom-0">
@@ -196,7 +199,7 @@
             Source : <strong>minhealthnz / nz-covid-data</strong>
           </p>
           <p class="text">
-            Last updated : <strong>Nov 10 2021, 11:05 AM</strong>            
+            Last updated : <strong>Nov 10 2021, 11:05 AM</strong>
           </p>
         </div>
       </section>
